[project]
name = "subgraph_pipeline"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "alembic>=1.16.5",
    "dagster==1.11.11",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "subgraph_pipeline"
registry_modules = [
    "subgraph_pipeline.components.*",
]


